# pylib

./: .gitignore  README.md  pyproject.toml
src/pylib/: __init__.py  __main__.py  api.py  cli.py
src/pylib/doc/: 000_index.md  001_cmd.md  010_create_package.ipynb  030_extract_lib.ipynb  lib_doc
src/pylib/doc/000_specs/: 002_cmd.md
src/pylib/doc/100_interactive_doc/: 000_cli.ipynb  001_cfg.ipynb  100_create_package.ipynb  101_inject_lib.ipynb  102_extract_lib.ipynb
src/pylib/doc/900_dev/: devnotes.md  feature_cfg.md  feature_flags.md
src/pylib/doc/dev/: devnotes.md
src/pylib/fns/: create_package.py  extract_lib.py  hello_world.py  inject_lib.py  tui.py
src/pylib/lib/: deco.py  fns.py  log.py  mkdoc.py  tools.py
src/pylib/lib/cfg/: cfg.py  src.py
src/pylib/lib/cli/: CLI.py  __init__.py  dev.py  history.py  print.py
src/pylib/lib/doc/: examples.ipynb
src/pylib/lib/tui/: cli_tui.py  cli_tui.tcss
src/pylib/packagetemplate/: README.md  pyproject.toml
src/pylib/packagetemplate/src/$PKG$/: __main__.py  cli.py
src/pylib/packagetemplate/src/$PKG$/doc/: 000_index.md
src/pylib/packagetemplate/tests/: test_executable.py  test_repeat.py
tests/: test_cfg.py  test_executable.py  test_repeat.py
