[project]
name = "pylib"
version = "0.0.3"
description = "common python code"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.5.1",
    "textual>=7.4.0",
    "typer>=0.20.0",
    "uv>=0.9.17",
]

[project.scripts]
pylib = "pylib.__main__:main"

[project.gui-scripts]

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = []

[tool.ruff]
extend-exclude = ["packagetemplate"]

[dependency-groups]
dev = [
    "nbval>=0.11.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
addopts = "./tests -v --capture=sys --cov=pylib --cov-report term-missing --nbval-lax ./src/pylib/doc"
testpaths = ["./tests","src/doc"]
markers = [
    "smoke: marks tests as part of smoke-testing",
    "repeat: used to repeat the last commandline call with pytest -m repeat."
]
